examples/diagnostics_demos/errors/module_and_script_error.flx
import Modules.Data.MyFile

fn value() {
  1;
}

Modules.Data.MyFile.value();
